--- a/src/components/topbar/topbar.scss
+++ b/src/components/topbar/topbar.scss
@@ -1,7 +1,19 @@
+@import "../../global.scss";
+
 .topbar{
-    background-color: darkblue;
+    background-color: white;
+    color:$mainColor;
     width: 100%;
     height: 70px;
     position: fixed;
     top: 0;
+    z-index: 2; //para ficar na camada no topo da pilha de elementos
+    
+}
+
+.wrapper{
+    padding: 10px 30px;
+    display: flex;
+    align-items: center;
+
 }
