--- a/src/components/menu/menu.scss
+++ b/src/components/menu/menu.scss
@@ -1,10 +1,9 @@
 @import "../../global.scss";
-
 .menu{
-    width: 300px;
+    width: 350px;
     height: 100vh;
     background-color: $mainColor;
-    right: -300px;
+    right: -350px;
     top: 0;
     position: fixed;
     z-index: 2;
@@ -22,16 +21,21 @@
         margin: 0;
         padding: 0;
         list-style: none;
-        font-size: 28px;
-        font-weight: 300;
+        font-size: 38px;
+        font-weight: 100;
         color: white;
 
         li{
             margin-bottom: 24px;
+            text-align: center;
             a{
+                font-family: 'Dancing Script', cursive;
                 font-size: inherit;
                 color: inherit;
                 text-decoration: none;
+                &:hover{
+                    font-weight: 700;
+                }
                 
             }
         }
