--- a/src/components/intro/intro.scss
+++ b/src/components/intro/intro.scss
@@ -4,8 +4,28 @@
 
     .left{
         flex: 0.5; 
+        background-color: white;
+        overflow: hidden;
+        
+        .imgContainer{
+            width: 700px;
+            height: 700px;
+            align-items: flex-end;
+            display: flex;
+            justify-content: center;
+            background-color: #E49B67;
+            border-radius: 50%;
+            float: left;
+            
+            img{
+                height: 100%;
+                padding-right: 10%;
+                
+            }
+        }
     }
     .right{
         flex: 0.5;
+        background-color:blanchedalmond;
     }
 }
