--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;500;600;700&family=Open+Sans:ital,wght@0,300;0,500;0,800;1,300;1,400;1,500;1,600;1,700;1,800&family=Sarabun:ital,wght@0,100;0,300;0,400;0,800;1,200;1,300;1,600&display=swap');
 *{
     overflow-x: hidden;
     margin: 0;
     font-family: 'Sarabun', sans-serif;
+    
 }
