--- a/src/components/intro/intro.scss
+++ b/src/components/intro/intro.scss
@@ -1,3 +1,4 @@
+
 .intro{
     background-color: lightslategrey;
     display: flex;
@@ -5,11 +6,12 @@
     .left{
         flex: 0.5; 
         background-color: white;
+       
         overflow: hidden;
         
         .imgContainer{
-            width: 700px;
-            height: 700px;
+            width: 900px;
+            height: 900px;
             align-items: flex-end;
             display: flex;
             justify-content: center;
@@ -21,11 +23,65 @@
                 height: 100%;
                 padding-right: 10%;
                 
+                
             }
         }
     }
     .right{
+        border: 1px solid black;
         flex: 0.5;
-        background-color:blanchedalmond;
+        background-color: white;
+        
+        //overflow: hidden;
+        //background-color:blanchedalmond;
+
+        .wrapper{                       //texto
+            border: 1px solid black;
+            width: 100%;
+            height: 100%;
+            padding-left: 50px;
+            padding-top: 230px;
+            //flex-direction: column;
+            //justify-content: center;
+            position: relative;
+
+            img{                        //splash png
+                position:absolute;
+                padding-top: 0px;
+                opacity: 70%;
+            }
+            
+            h1{                         //Adna Priscilla Cabral
+                border: 1px solid black;
+                padding-top: 100px;
+                padding-left: 140px;
+                font-family: 'Justicia';
+                font-weight: normal;
+                font-style: normal;
+                font-style:italic;
+                font-size: 50px;
+                position: absolute;
+
+            }
+            h2{                         //Psicologa...
+                border: 1px solid black;
+                font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+                font-weight:100;
+                padding-top: 70px;
+                position: absolute;
+                padding-left: 120px;
+            }
+            h3{                         //CRP
+                border: 1px solid black;
+                padding-top: 190px;
+                padding-left: 0px;
+                position: absolute;
+                padding-left: 120px;
+                font-weight: 300;
+                justify-content: center;
+
+            }
+            
+        }        
     }
 }
