--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;500;600;700&family=Open+Sans:ital,wght@0,300;0,500;0,800;1,300;1,400;1,500;1,600;1,700;1,800&family=Sarabun:ital,wght@0,100;0,300;0,400;0,800;1,200;1,300;1,600&display=swap');
+@font-face {
+    font-family: 'Justicia';
+    src: url('../public/assets/fonts/Justicia.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
+
 *{
     overflow-x: hidden;
     margin: 0;
