--- a/src/components/intro/intro.scss
+++ b/src/components/intro/intro.scss
@@ -1,6 +1,6 @@
 
 .intro{
-    background-color: lightslategrey;
+    background-color: rgb(208, 252, 250);
     display: flex;
 
     .left{
@@ -28,60 +28,81 @@
         }
     }
     .right{
-        border: 1px solid black;
+        //border: 1px solid black;
         flex: 0.5;
         background-color: white;
+        //position: relative;
         
         //overflow: hidden;
         //background-color:blanchedalmond;
 
-        .wrapper{                       //texto
-            border: 1px solid black;
+        .wrapper{                       //texto e bg
+            //border: 1px solid black;
             width: 100%;
             height: 100%;
-            padding-left: 50px;
-            padding-top: 230px;
+            //padding-left: 50px;
+            padding-top: 250px;
             //flex-direction: column;
             //justify-content: center;
             position: relative;
+            right: 160px;
 
             img{                        //splash png
                 position:absolute;
                 padding-top: 0px;
+                left: 160px;
                 opacity: 70%;
             }
             
-            h1{                         //Adna Priscilla Cabral
-                border: 1px solid black;
-                padding-top: 100px;
-                padding-left: 140px;
-                font-family: 'Justicia';
-                font-weight: normal;
-                font-style: normal;
-                font-style:italic;
-                font-size: 50px;
-                position: absolute;
-
-            }
-            h2{                         //Psicologa...
-                border: 1px solid black;
-                font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-                font-weight:100;
-                padding-top: 70px;
-                position: absolute;
-                padding-left: 120px;
-            }
-            h3{                         //CRP
-                border: 1px solid black;
-                padding-top: 190px;
-                padding-left: 0px;
-                position: absolute;
-                padding-left: 120px;
-                font-weight: 300;
-                justify-content: center;
-
-            }
+            .textContainer{
+                //border: 3px solid rgb(3, 3, 3);
+                left: 50px;
+                padding-top: 40px;
             
-        }        
+                h1{                         //Adna Priscilla Cabral
+                    text-align: center;
+                    //border: 3px solid pink;
+                    font-family: 'Justicia';
+                    font-weight: normal;
+                    font-style: normal;
+                    font-style:italic;
+                    font-size: 50px;
+                    //position: absolute;
+    
+                }
+                
+                h2{                         //Psicologa...
+                    //border: 1px solid black;
+                    text-align: center;
+                    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+                    font-weight:100;
+                    //position: absolute;
+                }
+                h3{                         //CRP
+                    //border: 1px solid black;
+                    text-align: center;
+                    // position: absolute;
+                    font-weight: 300;
+
+
+                }
+            }          
+        }   
+        a{
+            //border: 1px solid black;
+            bottom: 10px;
+            position: absolute;   
+            left: 60%;
+            
+            img{
+                width: 30px;
+                animation: arrowChange 2s infinite reverse;
+            }
+            @keyframes arrowChange {
+                to{
+                    opacity: 50%;
+                }
+            }
+        }       
     }
 }
