--- a/src/components/intro/intro.scss
+++ b/src/components/intro/intro.scss
@@ -94,15 +94,16 @@
             position: absolute;   
             left: 60%;
             
-            img{
+            img{   //nao esta vinculado ao right ????
                 width: 30px;
                 animation: arrowChange 2s infinite reverse;
-            }
-            @keyframes arrowChange {
-                to{
-                    opacity: 50%;
+                @keyframes arrowChange {
+                    to{
+                        opacity: 50%;
+                    }
                 }
             }
+           
         }       
     }
 }
