--- a/src/components/intro/intro.scss
+++ b/src/components/intro/intro.scss
@@ -83,8 +83,6 @@
                     text-align: center;
                     // position: absolute;
                     font-weight: 300;
-
-
                 }
             }          
         }   
@@ -92,15 +90,18 @@
             //border: 1px solid black;
             bottom: 10px;
             position: absolute;   
-            left: 60%;
+            left: 65%;
             
             img{   //nao esta vinculado ao right ????
                 width: 60px;
                 animation: arrowChange 5s infinite reverse;
                 
                 @keyframes arrowChange {
-                    to{
-                        opacity: 0%;
+                    50%{
+                        opacity: 1;
+                    }
+                    100%{
+                        opacity: 0;
                     }
                 }
             }
